# tortoise-database-url

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
database_url/: __init__.py  _main.py
scripts/: check.py  deps.py  format.py
src/tortoise_database_url/: __init__.py  _main.py
tests/: test_main.py  test_version.py
