[project]
name = "tortoise-database-url"
description = "Make it easy to generate database url."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
keywords = ["database_url", "tortoise-orm"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
homepage = "https://github.com/waketzheng/database-url"
repository = "https://github.com/waketzheng/database-url.git"

[dependency-groups]
dev = [
    "fast-dev-cli>=0.15.1",
    "bandit>=1.8.3",
    "twine>=6.1.0",
]
ci = ["coveralls @ git+https://github.com/waketzheng/coveralls-python@4.1.1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]

[tool.coverage.run]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.pdm.version]
source = "file"
path = "database_url/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
