[project]
name = "tortoise-database-url"
description = "Make it easy to generate database url."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
keywords = ["database_url", "tortoise-orm"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
homepage = "https://github.com/waketzheng/database-url"
repository = "https://github.com/waketzheng/database-url.git"

[dependency-groups]
dev = [
    "fast-dev-cli>=0.17.0",
    "bandit>=1.8.6",
    "twine>=6.1.0",
    "asynctor>=0.8.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"scripts/*.py" = ["UP009","UP032"]

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]

[tool.coverage.run]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.pdm.version]
source = "file"
path = "src/tortoise_database_url/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = {composite = ["pre-commit install", "deps"]}
pypi = 'pdm run python scripts/uv_pypi.py {args}'
up = {composite = ['uv lock --upgrade', 'uv sync --frozen --inexact --all-extras', 'pypi']}
tree = 'pdm list --tree {args}'
deps = 'pdm run python scripts/deps.py --uv {args}'
prod = 'uv sync --no-dev {args}'
fresh = {composite = ["up", "deps --uv", "pypi"]}
test = 'pdm run fast test {args}'
style = {composite = ["ruff format", "ruff check --fix {args}"]}
check = 'pdm run fast check {args}'
lint = 'pdm run fast lint {args}'
tag = {composite = ["deps", "pypi --quiet", "pdm run fast tag {args}"]}
bump = {composite = ["deps", "pypi --quiet", "pdm run fast bump patch --commit {args}"]}
ci = {composite = ["deps", "check", "test"]}
release = {composite = ["bump", "tag"]}
