[project]
name = "tortoise-database-url"
description = "Make it easy to generate database url."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
keywords = ["database_url", "tortoise-orm"]
requires-python = ">=3.10"
dependencies = [
    "asynctor>=0.12.11",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/waketzheng/database-url"
repository = "https://github.com/waketzheng/database-url.git"

[dependency-groups]
dev = [
    "fast-dev-cli>=0.23.0",
    "coverage>=7.10.7",
    "bandit>=1.9.4",
    "twine>=6.2.0",
    "pytest>=9.0.3",
    "ensure-import>=0.6.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"scripts/*.py" = ["UP009","UP032"]

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]

[tool.coverage.run]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.pdm.version]
path = "src/tortoise_database_url/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = {composite = ["pre-commit install", "deps"]}
pypi = 'pdm run fast pypi {args}'
up = {composite = ['uv lock --upgrade', 'uv sync --frozen --inexact --all-extras', 'pypi']}
tree = 'pdm list --tree {args}'
deps = 'uv sync --all-extras --all-groups {args}'
prod = 'uv sync --no-dev {args}'
fresh = {composite = ["up", "deps --uv", "pypi"]}
test = 'pdm run fast test {args}'
style = {composite = ["ruff format", "ruff check --fix {args}"]}
check = 'pdm run fast check --ty {args}'
lint = 'pdm run fast lint --ty {args}'
tag = {composite = ["deps", "pypi --quiet", "pdm run fast tag {args}"]}
bump = {composite = ["deps", "pypi --quiet", "pdm run fast bump patch --commit {args}"]}
ci = {composite = ["deps", "check", "test"]}
release = {composite = ["bump", "tag"]}
